实现方法区

--- a/docs/字节码指令.md
+++ b/docs/字节码指令.md
@@ -65,3 +65,17 @@ do {
 - wide：如果有方法的局部变量表超过256，Java虚拟机规范定义了wide指令来扩展前述指令。
 - ifnull和ifnonnull：引用是否是null进行跳转，ifnull和ifnonnull指令把栈顶的引用弹出。
 - goto_w指令：索引从2字节变成了4字节
+
+### 对象相关指令
+- new指令专门用来创建类实例，new指令的操作数是一个uint16索引。通过这个索引，可以从当前类的运行时常量池中找到一个类符号引用
+- putstatic指令给类的某个静态变量赋值，它需要两个操作数。第一个操作数是uint16索引，来自字节码。通过这个索引可以从当前类的运行时常量池中找到一个字段符号引用，解析这个符号引用就可以知道要给类的哪个静态变量赋值。第二个操作数是要赋给静态变量的值。
+- getstatic指令和putstatic正好相反，它取出类的某个静态变量值，然后推入栈顶
+- putfield指令给实例变量赋值，它需要三个操作数。前两个操作数是常量池索引和变量值，用法和putstatic一样。第三个操作数是对象引用，从操作数栈中弹出。
+- getfield指令获取对象的实例变量值，然后推入操作数栈，它需要两个操作数。第一个操作数是uint16索引。第二个操作数是对象引用，用法和putfield一样。
+- instanceof判断对象是否是某个类的实例，并把结果推入操作数栈，instanceof指令需要两个操作数。第一个操作数是uint16索引，通过这个索引可以从当前类的运行时常量池中找到一个类符号引用第二个操作数是对象引用。
+- checkcast则不改变操作数栈（如果判断失败，直接抛出ClassCastException异常）。
+
+### ldc指令
+从运行时常量池中加载常量值，并把它推入操作数栈。
+- ldc和ldc_w指令用于加载int、float和字符串常量，java.lang.Class实例或者MethodType和MethodHandle实例。
+- dc2_w指令用于加载long和double常量。
