实现方法调用

--- a/docs/字节码指令.md
+++ b/docs/字节码指令.md
@@ -79,3 +79,11 @@ do {
 从运行时常量池中加载常量值，并把它推入操作数栈。
 - ldc和ldc_w指令用于加载int、float和字符串常量，java.lang.Class实例或者MethodType和MethodHandle实例。
 - dc2_w指令用于加载long和double常量。
+
+### 方法调用指令
+- invokestatic： 调用静态方法
+- invokespecial：无须动态绑定的实例方法，包括构造函数、私有方法和通过super关键字调用的超类方法
+- invokevirtual：调用对象的实例方法，根据对象的实际类型进行分派
+- invokeinterface：用以调用接口方法，在运行时搜索一个实现了这个接口方法的对象，找出适合的方法进行调用。
+### 方法返回指令
+return指令用于没有返回值的情况，areturn、ireturn、lreturn、freturn和dreturn分别用于返回引用、int、long、float和double类型的值。方法执行完毕之后，需要把结果返回给调用方。压入调用帧栈顶。
