--- a/docs/字节码指令.md
+++ b/docs/字节码指令.md
@@ -85,5 +85,15 @@ do {
 - invokespecial：无须动态绑定的实例方法，包括构造函数、私有方法和通过super关键字调用的超类方法
 - invokevirtual：调用对象的实例方法，根据对象的实际类型进行分派
 - invokeinterface：用以调用接口方法，在运行时搜索一个实现了这个接口方法的对象，找出适合的方法进行调用。
+
 ### 方法返回指令
 return指令用于没有返回值的情况，areturn、ireturn、lreturn、freturn和dreturn分别用于返回引用、int、long、float和double类型的值。方法执行完毕之后，需要把结果返回给调用方。压入调用帧栈顶。
+
+### 数组相关指令
+- newarray指令用来创建基本类型数组，包括`boolean[]、byte[]、char[]、short[]、int[]、long[]、float[]和double[]`8种。第一个操作数是一个uint8整数，在字节码中紧跟在指令操作码后面，表示要创建哪种类型的数组。
+- anewarray指令也需要两个操作数。第一个操作数是uint16索引，来自字节码。通过这个索引可以从当前类的运行时常量池中找到一个类符号引用，解析这个符号引用就可以得到数组元素的类。第二个操作数是数组长度，从操作数栈中弹出。
+- arraylength指令用于获取数组长度
+- xaload系列指令按索引取数组元素值，然后推入操作数栈
+- tastore系列指令按索引给数组元素赋值
+- multianewarray指令创建多维数组,第一个操作数是个uint16索引，通过这个索引可以从运行时常量池中找到一个类符号引用，解析这个引用就
+可以得到多维数组类。第二个操作数是个uint8整数，表示数组维度。
