实现异常的抛出和不足，并打印异常信息

--- a/docs/字节码指令.md
+++ b/docs/字节码指令.md
@@ -97,3 +97,6 @@ return指令用于没有返回值的情况，areturn、ireturn、lreturn、fretu
 - tastore系列指令按索引给数组元素赋值
 - multianewarray指令创建多维数组,第一个操作数是个uint16索引，通过这个索引可以从运行时常量池中找到一个类符号引用，解析这个引用就
 可以得到多维数组类。第二个操作数是个uint8整数，表示数组维度。
+
+### athrow
+异常处理，通过查找异常处理表来实现
